# MonkeyView

./: .gitignore  README.developer.ja.md  README.md  index.html  overlay_image_app_spec.md  package-lock.json  package.json  vite.config.ts
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: image_loading.rs  main.rs  native_cursor.rs  window_setup.rs
src/lib/: types.ts
src/lib/components/: OverlayApp.svelte  ToolbarApp.svelte
src/lib/image/: imageLoader.ts
src/lib/math/: bounds.test.ts  bounds.ts  transform.test.ts  transform.ts
src/lib/state/: contracts.ts  overlayState.test.ts  overlayState.ts
src/lib/window/: cursor.test.ts  cursor.ts  windowControl.ts
