[package]
name = "monkey_view"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
image = { version = "0.25.8", default-features = false, features = ["jpeg", "png", "tiff"] }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.9.1", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-dialog = "2.4.0"
thiserror = "2.0.17"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", features = ["NSCursor"] }

[dev-dependencies]
tempfile = "3.23.0"
